--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
    profiles:
       active: devel
    datasource:
-      url: jdbc:h2:mem:testdb
+      url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
       driverClassName: org.h2.Driver
       username: sa
       password:
